--- a/index.html
+++ b/index.html
@@ -316,8 +316,9 @@
             </div>
             <div class="menu-item">
                 <img src="./svg/menu-4.svg" alt="Icon">
-                <span>طلای دیجیتال</span>
-
+              <a href="./tala.html"
+                > <span>طلای دیجیتال</span> </a
+              >
             </div>
             <div class="menu-item">
                 <img src="./svg/menu-5.svg" alt="Icon">
